[tool.poetry]
name = "torb"
version = "1.0.0b1"
description = "Torb is a buildbot that uses lambda and aws step functions to run builds."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/4dn-dcic/python-lambda"
repository = "https://github.com/4dn-dcic/python-lambda"
packages = [
  { include="torb", from="." }
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.4',
  'Programming Language :: Python :: 3.5',
  'Programming Language :: Python :: 3.6',
]

[tool.poetry.dependencies]
"python" = ">=3.6,<3.7"
"dcicutils" = ">=0.8.1"
"python-lambda-4dn" = ">=0.10.2"
# Build tasks
"invoke" = ">=0.18.1,<1"
# Syntax checking
"flake8" = ">=2.4.1,<3"
"mock" = ">=4.0.1,<5"
"pytest-runner" = ">=5.2"
"pytest" = ">=3.0.5,<4"
"pytest-cov" = ">=2.3.1,<3"

[tool.poetry.dev-dependencies]
# This (coveralls) is installed by .travis.yml. Should we depend on it here? -kmp 6-Mar-2020
# "coveralls" = ">=1.11.1,<2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
