[tool.poetry]
name = "torb"
version = "1.999"
description = "Torb is a now-OBSOLETE buildbot that once used lambda and aws step functions to run builds."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/4dn-dcic/torb"
repository = "https://github.com/4dn-dcic/torb"
packages = [
  { include="torb", from="." }
]
classifiers = [
  'Development Status :: 7 - Inactive',  # This repository is OBSOLETE. See README.rst
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.6',
]

[tool.poetry.dependencies]
"python" = ">=3.6.1,<3.7"
"dcicutils" = ">=3.1.0"
"PyYAML" = ">=5.1,<5.5"
"python-lambda-4dn" = "2.0.0b2"
# Build tasks
"invoke" = ">=0.18.1,<1"
# Syntax checking
"flake8" = ">=3.7.8,<4"
"mock" = ">=4.0.1,<5"
"pytest-runner" = ">=5.2"
"pytest" = ">=3.0.5,<4"
"pytest-cov" = ">=2.3.1,<3"

[tool.poetry.dev-dependencies]
# This (coveralls) is installed by .travis.yml. Should we depend on it here? -kmp 6-Mar-2020
# "coveralls" = ">=1.11.1,<2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
